# csh

./: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
src/: app.rs  components.rs  lib.rs  main.rs  page.rs  pages.rs  route.rs  style.rs
src/components/: card.rs  footer.rs  nav.rs  sub_title.rs  title.rs  video.rs  video_list.rs
src/page/: create_page.rs  doctors_page.rs  home.rs  page_trait.rs
src/pages/: about.rs  contact.rs  demo.rs  home.rs  not_found.rs  services_page.rs
src/styles/: index.scss
