[package]
name = "clinic"
version = "0.1.0"
edition = "2021"
authors = ["PinYu1618 <pycc1618@gmail.com>"]
license = "LICENSE"
default-run = "clinic_bin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "clinic_bin"
path = "src/main.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4"
wasm-logger = "0.2.0"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

[dependencies.yew]
version = "0.19"
# features = ["csr"]